--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "fly-babel",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Babel plugin for Fly",
   "license": "MIT",
   "repository": "https://github.com/bucaran/fly-babel",
   "main": "index.js",
   "scripts": {
     "lint": "eslint *.js",
-    "tape": "tape test/*.js",
-    "test": "npm run lint && npm run tape | tspec",
+    "setup": "npm i && npm test",
+    "test": "npm run lint && tape test/*.js | tspec",
     "build": "echo No build task specified.",
     "deploy": "npm run test && git push origin master && npm publish",
     "test-ci": "node --harmony --harmony_arrow_functions ./node_modules/tape/bin/tape test/*.js"
