--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "iojs": ">= 1.0.0",
     "node": ">= 0.11.0"
   },
-  "keywords": {
+  "keywords": [
     "fly",
     "fly-plugin",
     "babel"
-  }
+  ]
 }
