--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "author": "Jorge Bucaran",
   "dependencies": {
-    "babel": "^5.6.14"
+    "babel-core": "*"
   },
   "devDependencies": {
     "eslint": "^0.21.2",
@@ -26,11 +26,18 @@
   },
   "engines": {
     "iojs": ">= 1.0.0",
-    "node": ">= 0.11.0"
+    "node": ">= 0.12.0"
   },
   "keywords": [
     "fly",
     "fly-plugin",
-    "babel"
+    "babel",
+    "es6",
+    "compile",
+    "transpile",
+    "6to5",
+    "harmony",
+    "ES.next",
+    "ecmascript"
   ]
 }
