--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "author": "Jorge Bucaran",
   "dependencies": {
+    "babel-core": "^5.8.29",
     "object-assign": "^3.0.0",
-    "babel-core": "*",
     "source-map": "^0.4.4"
   },
   "devDependencies": {
