--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 node_js:
-  - "0.11"
-  - "0.12"
-  - "iojs"
+  - '6'
+  - '5'
+  - '4'
+  - '0.12'
+  - 'iojs'
 
-script: "npm run test-harmony"
+script: 'npm run test-harmony'
