--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "npm run lint && npm run test-harmony",
     "build": "echo No build task specified.",
     "deploy": "npm run test && git push origin master && npm publish",
-    "test-harmony": "node --harmony --harmony_arrow_functions ./node_modules/tape/bin/tape test/*.js"
+    "test-harmony": "node --harmony `which tape` test/*.js | `which tspec`"
   },
   "author": "Jorge Bucaran",
   "dependencies": {
@@ -23,7 +23,6 @@
   },
   "devDependencies": {
     "eslint": "^0.21.2",
-    "fly-util": "^4.0.1",
     "tap-spec": "^4.0.2",
     "tape": "^4.0.0"
   },
