--- a/.editorconfig
+++ b/.editorconfig
@@ -2,11 +2,14 @@
 root = true
 
 [*]
-indent_style = space
 indent_size = 2
+indent_style = tab
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[{*.md,*.json,*.yml}]
+indent_style = space
 
 [*.md]
 trim_trailing_whitespace = false
