--- a/package.json
+++ b/package.json
@@ -6,13 +6,7 @@
   "repository": "https://github.com/bucaran/fly-babel",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint *.js",
-    "setup": "npm i && npm test",
-    "spec": "npm run test | tspec",
-    "test": "npm run lint && npm run test-harmony",
-    "build": "echo No build task specified.",
-    "deploy": "npm run test && git push origin master && npm publish",
-    "test-harmony": "node --harmony `which tape` test/*.js | `which tspec`"
+    "test": "xo && node --harmony `which tape` test/*.js | `which tspec`"
   },
   "author": {
     "name": "Jorge Bucaran",
@@ -33,9 +27,9 @@
     "source-map": "^0.4.4"
   },
   "devDependencies": {
-    "eslint": "^0.21.2",
     "tap-spec": "^4.0.2",
-    "tape": "^4.0.0"
+    "tape": "^4.0.0",
+    "xo": "^0.12.0"
   },
   "engines": {
     "iojs": ">= 1.0.0",
@@ -51,6 +45,13 @@
     "6to5",
     "harmony",
     "ES.next",
+    "esnext",
     "ecmascript"
-  ]
+  ],
+  "xo": {
+    "semicolon": false,
+    "ignore": [
+      "test/fixture/*.js"
+    ]
+  }
 }
