--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "source-map": "^0.4.4"
   },
   "devDependencies": {
+    "babel-plugin-transform-function-bind": "^6.8.0",
     "tap-spec": "^4.0.2",
     "tape": "^4.0.0",
     "xo": "^0.16.0"
