--- a/package.json
+++ b/package.json
@@ -1,56 +1,57 @@
 {
-	"name": "fly-babel",
-	"version": "1.0.1",
-	"description": "Babel plugin for Fly",
-	"license": "MIT",
-	"repository": "https://github.com/bucaran/fly-babel",
-	"main": "index.js",
-	"scripts": {
-		"test": "xo && tape test/*.js | tap-spec"
-	},
-	"author": "Jorge Bucaran",
-	"contributors": [
-		{
-			"name": "Luke Edwards",
-			"email": "luke@lukeed.com",
-			"url": "https://lukeed.com"
-		},
-		{
-			"name": "Oleh Kuchuk",
-			"email": "kuchuklehjs@gmail.com",
-			"url": "https://github.com/hzlmn"
-		}
-	],
-	"dependencies": {
-		"babel-core": "^6.3.0",
-		"read-pkg-up": "^1.0.1"
-	},
-	"devDependencies": {
-		"babel-plugin-transform-function-bind": "^6.8.0",
-		"babel-preset-es2015": "^6.3.0",
-		"tap-spec": "^4.0.2",
-		"tape": "^4.0.0",
-		"xo": "^0.16.0"
-	},
-	"engines": {
-		"node": ">= 4.6.0"
-	},
-	"keywords": [
-		"fly",
-		"fly-plugin",
-		"babel",
-		"es6",
-		"compile",
-		"esnext",
-		"transpile",
-		"6to5",
-		"harmony",
-		"ES.next",
-		"ecmascript"
-	],
-	"xo": {
-		"rules": {
-			"require-yield": 1
-		}
-	}
+  "name": "fly-babel",
+  "version": "1.0.1",
+  "description": "Babel plugin for Fly",
+  "license": "MIT",
+  "repository": "https://github.com/bucaran/fly-babel",
+  "main": "index.js",
+  "scripts": {
+    "test": "xo && tape test/*.js | tap-spec"
+  },
+  "author": "Jorge Bucaran",
+  "contributors": [
+    {
+      "name": "Luke Edwards",
+      "email": "luke@lukeed.com",
+      "url": "https://lukeed.com"
+    },
+    {
+      "name": "Oleh Kuchuk",
+      "email": "kuchuklehjs@gmail.com",
+      "url": "https://github.com/hzlmn"
+    }
+  ],
+  "dependencies": {
+    "babel-core": "^6.3.0",
+    "read-pkg-up": "^1.0.1"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-function-bind": "^6.8.0",
+    "babel-preset-es2015": "^6.3.0",
+    "fly": "beta",
+    "tap-spec": "^4.0.2",
+    "tape": "^4.0.0",
+    "xo": "^0.16.0"
+  },
+  "engines": {
+    "node": ">= 4.6.0"
+  },
+  "keywords": [
+    "fly",
+    "fly-plugin",
+    "babel",
+    "es6",
+    "compile",
+    "esnext",
+    "transpile",
+    "6to5",
+    "harmony",
+    "ES.next",
+    "ecmascript"
+  ],
+  "xo": {
+    "rules": {
+      "require-yield": 1
+    }
+  }
 }
