use spaces within readme

--- a/.editorconfig
+++ b/.editorconfig
@@ -8,5 +8,6 @@ indent_style = tab
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.md]
+[{package.json,*.md}]
+indent_style = space
 trim_trailing_whitespace = false
