--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     }
   ],
   "dependencies": {
-    "babel-core": "^6.3.0",
+    "@babel/core": "^7.5.4",
     "flatten": "^1.0.2",
     "read-pkg-up": "^1.0.1"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.3.0",
-    "fly": "^2.0.2",
+    "@babel/preset-env": "^7.5.4",
+    "fly": "^3.2.2",
     "fly-clear": "^1.0.1",
     "tap-spec": "^4.0.2",
     "tape": "^4.0.0",
